2015-06-11  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_commonsize.m: Accept empty dimensions

	* arrays/generic/stk_commonsize.m: Accept empty dimensions, under
	the condition that all input arguments have the same empty
	dimensions (in which case the result is empty).

2015-06-10  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/subsasgn.m: Preserve column names when deleting rows

	* arrays/@stk_dataframe/subsasgn.m: Preserve column names when
	deleting rows, even if the resulting array is empty.

2015-05-29  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_distrib_bivnorm_cdf.m: Bugfix

	* misc/distrib/stk_distrib_bivnorm_cdf.m: Fix a bug in the case of
	mixtures of singular and non-singular cases. Add unit test.

2015-05-24  Julien Bect  <julien.bect@centralesupelec.fr>

	Clear persistent variables in stk_init

	* config/stk_config_clearpersistents.m: New function that unlocks
	all possibly mlock-ed STK files and clears all STK functions that
	contain persistent variables.
	* stk_init.m: Call stk_config_clearpersistents.
	* admin/RELEASE.md: Update release instructions.

2015-05-20  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/set.m: Fix stk_error calls (missing mnemonic)

	* arrays/@stk_dataframe/set.m: Fix stk_error calls (missing mnemonic)

	stk_param_estim.m: Make sure that lnv0 falls within the bounds

	* paramestim/stk_param_estim.m (get_default_bounds_lnv): Make sure
	that lnv0 falls within the bounds returned by get_default_bounds_lnv.

2015-05-19  Julien Bect  <julien.bect@supelec.fr>

	stk_optim_hasfmincon.m: Improve fmincon detection

	* misc/optim/stk_optim_hasfmincon.m: Try to use fmincon to check
	that it is there, instead of relying on the result of the exist
	function (closes ticket #30).

2015-05-17  Julien Bect  <julien.bect@supelec.fr>

	admin/octpkg/Makefile: Use $(MKOCTFILE) if defined

	* admin/octpkg/Makefile: Use $(MKOCTFILE) if defined

	stk_runtests.m: Make sure that all Octave warnings are disabled
